--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ a:visited  {color: black;
 	}
    
 body {
-	background: #336666;
+	background: #660000;
 	margin: 0; /* it's good practice to zero the margin and padding of the body element to account for differing browser defaults */
 	padding: 0;
 	text-align: center; /* this centers the container in IE 5* browsers. The text is then set to the left aligned default in the #container selector */
@@ -20,7 +20,7 @@ body {
 }
 .oneColFixCtrHdr #container {
 	width: 780px;  /* using 20px less than a full 800px width allows for browser chrome and avoids a horizontal scroll bar */
-	background: #00EEAA;
+	background: #CCCCCC;
 	text-align: left; /* this overrides the text-align: center on the body element. */
 	margin-top: 0;
 	margin-right: auto;
@@ -36,7 +36,7 @@ body {
 	background: #DDDDDD;  /* this padding matches the left alignment of the elements in the divs that appear beneath it. If an image is used in the #header instead of text, you may want to remove the padding. */
 	border-bottom-width: thick;
 	border-bottom-style: solid;
-	border-bottom-color: #336666;
+	border-bottom-color: #660000;
 }
 .oneColFixCtrHdr #header h1 {
 	margin: 0; /* using padding instead of margin will allow you to keep the element away from the edges of the div */
@@ -49,7 +49,7 @@ body {
 	padding-left: 20px;
 }
 .oneColFixCtrHdr #footer {
-	background-color: #00EEAA;
+	background-color: #CCCCCC;
 	width: 156px;
 	text-align: center;
 	float: left;
@@ -66,8 +66,8 @@ body {
 .oneColFixCtrHdr #navigation {
 	width: 156px;
 	border-top-style: none;
-	border-top-color: #336666;
-	background-color: #00EEAA;
+	border-top-color: #660000;
+	background-color: #CCCCCC;
 	text-align: center;
 	float: left;
 	clear: none;
@@ -85,7 +85,7 @@ body {
 .oneColFixCtrHdr #navigation-active {
 	width: 156px;
 	border-top-style: none;
-	border-top-color: #336666;
+	border-top-color: #660000;
 	background-color: #FFFFFF;
 	text-align: center;
 	float: left;
@@ -108,7 +108,7 @@ body {
 	margin-bottom: 0;
 	margin-left: auto;
 	border: 0px none #000000;
-	background-color: #336666;
+	background-color: #660000;
 	padding: 0px;
 	height: 10px;
 	font-size: 18px;
