--- a/spruce/style.css
+++ b/spruce/style.css
@@ -1,7 +1,7 @@
 body {
 	background: #CCC;
 	margin: 0px;
-	padding: 0px;
+	padding: 15px;
 	font-family: Franklin, Helvetica, Trebuchet, Arial, sans-serif;
 	font-size: 12pt;
 }
@@ -19,6 +19,9 @@ a {
 	height: 89px;
 	background: #868686;
 	background-image: url('./img/head_bg.png');
+			-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px; 
 }
 #header {
 	height: 89px;
@@ -77,7 +80,8 @@ a {
 	text-decoration: underline;
 }
 #page {
-	background: white;
+	background: url('./img/head_bg.png') repeat-x top;
+	background-color: #919191;
 		-moz-box-shadow: 0 0 10px #444;
 	-webkit-box-shadow: 0 0 10px #444;
 	box-shadow: 0 0 10px #444;
@@ -88,8 +92,13 @@ a {
 #main {
 	padding: 40px 15px 15px 15px;
 	font-size: 11pt;
+			-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px; 
+	background: white;
 }
 
 #main h2 {
 	color: #2c759b;
+
 }
