--- a/style.css
+++ b/style.css
@@ -1,116 +1,104 @@
-@charset "utf-8";
-a  {color: black;
-    font-weight: bold;
-   }
-a:hover  {color: black;
-    font-weight: bold;
-   }
-a:visited  {color: black;
-    font-weight: bold;
-	}
-   
 body {
-	background: #660000;
-	margin: 0; /* it's good practice to zero the margin and padding of the body element to account for differing browser defaults */
-	padding: 0;
-	text-align: center; /* this centers the container in IE 5* browsers. The text is then set to the left aligned default in the #container selector */
-	color: #000000;
-	font-family: Calibri, Verdana, Arial, Helvetica, sans-serif;
-	font-size: 100%;
+	background: #CCC;
+	margin: 0px;
+	padding: 15px;
+	font-family: Franklin, Helvetica, Trebuchet, Arial, sans-serif;
+	font-size: 12pt;
 }
-.oneColFixCtrHdr #container {
-	width: 780px;  /* using 20px less than a full 800px width allows for browser chrome and avoids a horizontal scroll bar */
-	background: #CCCCCC;
-	text-align: left; /* this overrides the text-align: center on the body element. */
-	margin-top: 0;
-	margin-right: auto;
-	margin-bottom: 0;
-	margin-left: auto;
-	padding-bottom: 0px;
-	padding-top: 10px;
-	padding-right: 0px;
-	padding-left: 0px;
-	border: 0px none #000000;
+a {
+	outline: none;
 }
-.oneColFixCtrHdr #header {
-	background: #DDDDDD;  /* this padding matches the left alignment of the elements in the divs that appear beneath it. If an image is used in the #header instead of text, you may want to remove the padding. */
-	border-bottom-width: thick;
-	border-bottom-style: solid;
-	border-bottom-color: #660000;
+.lightblue {
+	color: #c0e4f7;
 }
-.oneColFixCtrHdr #header h1 {
-	margin: 0; /* using padding instead of margin will allow you to keep the element away from the edges of the div */
+#header,#page {
+	width: 700px;
 }
-.oneColFixCtrHdr #mainContent {
-	background: #FFFFFF;
-	padding-top: 20px;
-	padding-right: 20px;
-	padding-bottom: 10px;
-	padding-left: 20px;
+#headerbg {
+	width: 700px;
+	height: 89px;
+	background: #868686;
+	background-image: url('./img/head_bg.png');
+			-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px; 
 }
-.oneColFixCtrHdr #footer {
-	background-color: #CCCCCC;
-	width: 156px;
-	text-align: center;
-	float: left;
+#header {
+	height: 89px;
+	background: url('./img/ant-small.png') no-repeat left center;
+	padding-left: 75px;
+	margin-left: 15px;
+	color: white;
+}
+#header h1 {
+	margin: 0px;
 	padding: 0px;
-	clear: right;
+	padding-top: 26px;
 }
-.oneColFixCtrHdr #footer p {
-	margin: 0; /* padding on this element will create space, just as the the margin would have, without the margin collapse issue */
-	padding-top: 10px;
-	padding-right: 0;
-	padding-bottom: 0px;
-	padding-left: 0;
+.pageCenter{
+	margin: 0 auto;
 }
-.oneColFixCtrHdr #navigation {
-	width: 156px;
-	border-top-style: none;
-	border-top-color: #660000;
-	background-color: #CCCCCC;
-	text-align: center;
-	float: left;
-	clear: none;
-	border-top-width: thick;
-	border-right-width: 0px;
-	border-bottom-width: 0px;
-	border-left-width: 0px;
-	padding-top: 0px;
-	padding-right: 0px;
-	padding-bottom: 10px;
-	padding-left: 0px;
-	font-size: 18px;
+#menu ul,li {
+	display: inline;
+}
+#menu {
+	position: absolute;
+	width: 730px;
+	height: 33px;
+	margin-left: -15px;
+	background: #535353; 
+	background-image: url("./img/menu_bg.png");
+
+	-moz-box-shadow: 0 0 5px #444;
+	-webkit-box-shadow: 0 0 5px #444;
+	box-shadow: 0 0 5px #444;
+	color: #c3c3c3;
 	font-weight: bold;
+
+		-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px; 
 }
-.oneColFixCtrHdr #navigation-active {
-	width: 156px;
-	border-top-style: none;
-	border-top-color: #660000;
-	background-color: #FFFFFF;
-	text-align: center;
-	float: left;
-	clear: right;
-	border-top-width: thick;
-	border-right-width: 0px;
-	border-bottom-width: 0px;
-	border-left-width: 0px;
-	padding-top: 0px;
-	padding-right: 0px;
-	padding-bottom: 10px;
-	padding-left: 0px;
-	font-weight: bold;
-}
-.oneColFixCtrHdr #navcontainer {
-	width: 780px;
-	text-align: left; /* this overrides the text-align: center on the body element. */
-	margin-top: 0;
-	margin-right: auto;
-	margin-bottom: 0;
-	margin-left: auto;
-	border: 0px none #000000;
-	background-color: #660000;
+#menu ul {
+	position: absolute;
+	margin: 7px 0px 0px 10px;
 	padding: 0px;
-	height: 10px;
-	font-size: 18px;
-	font-weight: bold;
+}
+#menu li {
+	padding: 10px;
+}
+
+#menu {
+	color: #FFF;
+}
+#menu a {
+	color: #CCC;
+	text-decoration: none;
+}
+#menu a:hover {
+	color: #EEE;
+	text-decoration: underline;
+}
+#page {
+	background: url('./img/head_bg.png') repeat-x top;
+	background-color: #919191;
+		-moz-box-shadow: 0 0 10px #444;
+	-webkit-box-shadow: 0 0 10px #444;
+	box-shadow: 0 0 10px #444;
+		-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px; 
+}
+#main {
+	padding: 40px 15px 15px 15px;
+	font-size: 11pt;
+			-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px; 
+	background: white;
+}
+
+#main h2 {
+	color: #2c759b;
+
 }
