--- a/antgame/style.css
+++ b/antgame/style.css
@@ -82,3 +82,15 @@ body {
   -ms-user-select: none;
   user-select: none;
 }
+.table {
+  margin-bottom: 0;
+}
+.table td {
+  font-size: 14px;
+}
+.table .btn {
+  margin-bottom: -10px;
+}
+.nav-tabs {
+  margin-bottom: 10px;
+}
