--- a/antgame/style.css
+++ b/antgame/style.css
@@ -94,3 +94,20 @@ body {
 .nav-tabs {
   margin-bottom: 10px;
 }
+#ag-run-speed {
+  display: block;
+  float: left;
+  padding: 8px 20px 12px 0px;
+  margin-left: 0px;
+  font-size: 20px;
+  font-weight: 200;
+  line-height: 1;
+  color: #EEE;
+}
+#ag-run-container {
+  position: absolute;
+  top: 40px;
+  left: 0px;
+  background: #555555;
+  width: 100%;
+}
